// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow to custom the className of action 1`] = `
<button type="button"
        class="van-popover__action foo"
>
  <div class="van-popover__action-text van-hairline--bottom">
    Option
  </div>
</button>
`;

exports[`should locate to reference element when showed 1`] = `
<transition-stub>
</transition-stub>
`;

exports[`should locate to reference element when showed 2`] = `
<transition-stub>
  <div style="z-index: 2005; position: absolute; left: 0px; top: 8px; margin: 0px;"
       class="van-popup van-popover van-popover--light"
       data-popper-placement="bottom"
  >
    <div class="van-popover__arrow">
    </div>
    <div class="van-popover__content">
    </div>
  </div>
</transition-stub>
`;

exports[`should locate to reference element when showed 3`] = `
<transition-stub>
  <div style="z-index: 2005; display: none;"
       class="van-popup van-popover van-popover--light"
  >
    <div class="van-popover__arrow">
    </div>
    <div class="van-popover__content">
    </div>
  </div>
</transition-stub>
`;

exports[`should watch placement prop and update location 1`] = `
<transition-stub>
  <div style="z-index: 2006; position: absolute; left: 0px; top: -8px; margin: 0px;"
       class="van-popup van-popover van-popover--light"
       data-popper-placement="top"
  >
    <div class="van-popover__arrow">
    </div>
    <div class="van-popover__content">
    </div>
  </div>
</transition-stub>
`;
